Change mobile color and deactivate translate

--- a/manifest.json
+++ b/manifest.json
@@ -11,8 +11,8 @@
   "lang": "en",
   "start_url": "./index.html",
   "scope": "./",
-  "theme_color": "#439318",
-  "background_color": "#0f0e0e",
+  "theme_color": "#161618",
+  "background_color": "#37425b",
   "display": "standalone",
   "orientation": "portrait",
   "icons": [
