--- a/manifest.json
+++ b/manifest.json
@@ -31,21 +31,21 @@
       "label": "Displaying nine teams"
     },
     {
-      "src": "./img/pwa/screenshots/mobile_two_teams.jpg",
+      "src": "./img/pwa/screenshots/mobile_two_teams.png",
       "sizes": "720x1438",
       "type": "image/png",
       "platform": "narrow",
       "label": "Displaying two teams"
     },
     {
-      "src": "./img/pwa/screenshots/mobile_three_teams.jpg",
+      "src": "./img/pwa/screenshots/mobile_three_teams.png",
       "sizes": "720x1438",
       "type": "image/png",
       "platform": "narrow",
       "label": "Displaying three teams"
     },
     {
-      "src": "./img/pwa/screenshots/mobile_six_teams.jpg",
+      "src": "./img/pwa/screenshots/mobile_six_teams.png",
       "sizes": "720x1438",
       "type": "image/png",
       "platform": "narrow",
