--- a/manifest.json
+++ b/manifest.json
@@ -7,6 +7,7 @@
     "url": "https://github.com/j-alarcon"
   },
   "version": "1.0",
+  "iarc_rating_id": "b2aefd32-b413-4601-88f7-03c70d1a3477",
   "categories": ["utilities", "sports", "entertaiment"],
   "screenshots": [
     {
