Change PWA screenshots

--- a/manifest.json
+++ b/manifest.json
@@ -18,11 +18,18 @@
       "label": "Displaying two teams"
     },
     {
-      "src": "./img/pwa/screenshots/computer_six_teams.png",
+      "src": "./img/pwa/screenshots/computer_three_teams.png",
       "sizes": "1920x1080",
       "type": "image/png",
       "platform": "wide",
-      "label": "Displaying six teams"
+      "label": "Displaying three teams"
+    },
+    {
+      "src": "./img/pwa/screenshots/computer_five_teams.png",
+      "sizes": "1920x1080",
+      "type": "image/png",
+      "platform": "wide",
+      "label": "Displaying five teams"
     },
     {
       "src": "./img/pwa/screenshots/computer_nine_teams.png",
@@ -33,24 +40,31 @@
     },
     {
       "src": "./img/pwa/screenshots/mobile_two_teams.png",
-      "sizes": "720x1438",
+      "sizes": "720x1437",
       "type": "image/png",
       "platform": "narrow",
       "label": "Displaying two teams"
     },
     {
       "src": "./img/pwa/screenshots/mobile_three_teams.png",
-      "sizes": "720x1438",
+      "sizes": "720x1437",
       "type": "image/png",
       "platform": "narrow",
       "label": "Displaying three teams"
     },
     {
       "src": "./img/pwa/screenshots/mobile_six_teams.png",
-      "sizes": "720x1438",
+      "sizes": "720x1437",
       "type": "image/png",
       "platform": "narrow",
       "label": "Displaying six teams"
+    },
+    {
+      "src": "./img/pwa/screenshots/mobile_nine_teams.png",
+      "sizes": "720x1437",
+      "type": "image/png",
+      "platform": "narrow",
+      "label": "Displaying nine teams"
     }
   ],
   "lang": "en",
