--- a/manifest.json
+++ b/manifest.json
@@ -3,8 +3,8 @@
   "short_name": "Reoneo",
   "description": "Colorful counter to quantify scores of different teams with a timer",
   "developer": {
-    "name": "Javier Alarcón",
-    "url": "https://github.com/j-alarcon"
+    "name": "Yarduon",
+    "url": "https://yarduon.com"
   },
   "version": "1.2",
   "iarc_rating_id": "b2aefd32-b413-4601-88f7-03c70d1a3477",
