Fix typo manifest.json

--- a/manifest.json
+++ b/manifest.json
@@ -8,7 +8,7 @@
   },
   "version": "1.4",
   "iarc_rating_id": "b2aefd32-b413-4601-88f7-03c70d1a3477",
-  "categories": ["utilities", "sports", "entertaiment"],
+  "categories": ["utilities", "sports", "entertainment"],
   "screenshots": [
     {
       "src": "./img/pwa/screenshots/computer_two_teams.png",
